# imgui_util

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Dependencies.cmake
examples/: CMakeLists.txt  demo.cpp
include/imgui_util/: core.hpp  imgui_util.hpp  widgets.hpp
include/imgui_util/core/: error.hpp  fmt_buf.hpp  parse.hpp  raii.hpp  raii_internal.hpp
include/imgui_util/layout/: helpers.hpp  presets.hpp
include/imgui_util/plot/: raii.hpp
include/imgui_util/table/: table_builder.hpp
include/imgui_util/theme/: color_math.hpp  dynamic_colors.hpp  theme.hpp  theme_manager.hpp
include/imgui_util/widgets/: command_palette.hpp  confirm_button.hpp  context_menu.hpp  controls.hpp  curve_editor.hpp  diff_viewer.hpp  direction.hpp  drag_drop.hpp  helpers.hpp  hex_viewer.hpp  inline_edit.hpp  key_binding.hpp  log_viewer.hpp  menu_bar_builder.hpp  modal_builder.hpp  notification_center.hpp  progress_bar.hpp  property_editor.hpp  range_slider.hpp  reorder_list.hpp  search_bar.hpp  settings_panel.hpp  severity.hpp  spinner.hpp  splitter.hpp  status_bar.hpp  tab_bar_builder.hpp  tag_input.hpp  text.hpp  timeline.hpp  toast.hpp  toggle.hpp  toolbar.hpp  tree_view.hpp  undo_stack.hpp
include/imgui_util/widgets/detail/: menu_common.hpp
src/: CMakeLists.txt  theme.cpp  theme_manager.cpp
tests/: CMakeLists.txt  test_color_math.cpp  test_fmt_buf.cpp  test_parse.cpp  test_plot_raii.cpp  test_presets.cpp  test_raii.cpp  test_search.cpp  test_table_builder.cpp  test_text.cpp  test_theme_constexpr.cpp
